# scraper

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: cargo_test.yml
src/: camo.rs  main.rs  scraper.rs  web.rs
src/scraper/: buzzly.rs  deviantart.rs  nitter.rs  philomena.rs  raw.rs  tumblr.rs  twitter.rs
src/scraper/buzzly/: query.graphql  schema.json
src/scraper/philomena/: derpibooru.rs
