[package]
name = "scraper"
version = "0.1.0"
authors = ["Cult Pony"]
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
log = "0.4"
flexi_logger = "0.18"
url = { version = "2.2", features = ["serde"] }
url_serde = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kankyo = "0.3"
regex = "1.4"
lazy_static = "1.4"
tokio = { version = "1.12", features = ["full"] }
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
envconfig = "0.10"
better-panic = "0.2"
tide = "0.16"
anyhow = "1.0"
dns-lookup = "1.0"
ipnet = "2.3"
futures-cache = "0.10"
sled = "0.34"
securefmt = "0.1.4"
radix_fmt = "1.0.0"
camo-url = "0.1.2"
hex = "0.4.3"
ref_thread_local = "0.1.0"
visdom = "0.4.10"

[dev-dependencies]
tokio-test = "0.4"
visit_diff = "0.1"
random-number = "0.1.6"

[profile.release]
opt-level = 3
lto = true