[package]
name = "scraper"
version = "0.1.0"
authors = ["Cult Pony"]
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9", features = ["attributes", "tokio1"] }
better-panic = "0.2"
camo-url = "0.1.2"
dns-lookup = "1.0"
envconfig = "0.10"
flexi_logger = "0.22"
futures-cache = "0.10"
hex = "0.4.3"
ipnet = "2.4"
kankyo = "0.3"
lazy_static = "1.4"
log = "0.4"
radix_fmt = "1.0.0"
regex = "1"
reqwest = { version = "0.11", features = ["json", "socks", "cookies"] }
securefmt = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tide = "0.16"
tokio = { version = "1.17", features = ["full"] }
url = { version = "2.2", features = ["serde"] }
url_serde = "0.2"
visdom = "0.5.1"
graphql_client = "0.10.0"

[dev-dependencies]
tokio-test = "0.4"
visit_diff = "0.1"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true